--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="https://www.tedu.edu.tr/sites/default/files/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="This is the portfolio Website of mine. Made with ReactJS and love. Template by Kaustubh Mishra(@kaustubhai)">
-  <meta name="author" content="Kaustubh Mishra, Jaypee University of Information Technology, Solan">
+    content="This is a blockchain-based chat application senior project web site. You can check our Autumn Semester project reports">
+  <meta name="author" content="Baris, Gokay, Kaan, Onur">
   <meta name="keywords"
-    content="HTML, CSS, Javascript, ReactJS, NodeJS, SEO, Coding, Portfolio, Resume, Website, Profile, Github, Linkedin, Design, Interactive, CV, Skills">
+    content="Senior, Project, Blockchain, Flutter, React-Native, Coding, Portfolio, Website, Profile, Github, Linkedin, Design, Interactive,">
   <meta name="robots" content="index, follow">
-  <meta name="og:title" content="Portfolio Template">
-  <meta name="og:type" content="Resume Website">
+  <meta name="og:title" content="TEDU Chat">
+  <meta name="og:type" content="Senior Project Website">
   <meta name="og:locale" content="en_IN">
   <meta property="og:image" content="%PUBLIC_URL%/favicon-32x32.png">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -22,7 +22,7 @@
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <link rel="stylesheet" href="./Bootstrap5.css">
   <script src="https://kit.fontawesome.com/9b271ff51f.js" crossorigin="anonymous"></script>
-  <title>Portfolio Template</title>
+  <title>TEDU CHAT</title>
 </head>
 
 <body>
