share message changed

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="This is a blockchain-based chat application senior project web site. You can check our Autumn Semester project reports">
+    content="This is a blockchain-based chat application. You can check our senior project reports...">
   <meta name="author" content="Baris, Gokay, Kaan, Onur">
   <meta name="keywords"
     content="Senior, Project, Blockchain, Flutter, React-Native, Coding, Portfolio, Website, Profile, Github, Linkedin, Design, Interactive,">
