--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="Senior, Project, Blockchain, Flutter, React-Native, Coding, Portfolio, Website, Profile, Github, Linkedin, Design, Interactive,">
   <meta name="robots" content="index, follow">
-  <meta name="og:title" content="TEDU Chat">
+  <meta name="og:title" content="Chain Chat">
   <meta name="og:type" content="Senior Project Website">
   <meta name="og:locale" content="en_IN">
   <meta property="og:image" content="%PUBLIC_URL%/favicon-32x32.png">
@@ -22,7 +22,7 @@
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <link rel="stylesheet" href="./Bootstrap5.css">
   <script src="https://kit.fontawesome.com/9b271ff51f.js" crossorigin="anonymous"></script>
-  <title>TEDU CHAT</title>
+  <title>CHAIN CHAT</title>
 </head>
 
 <body>
