--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="Senior, Project, Blockchain, Flutter, React-Native, Coding, Portfolio, Website, Profile, Github, Linkedin, Design, Interactive,">
   <meta name="robots" content="index, follow">
-  <meta name="og:title" content="Chain Chat">
+  <meta name="og:title" content="Chat Chain">
   <meta name="og:type" content="Senior Project Website">
   <meta name="og:locale" content="en_IN">
   <meta property="og:image" content="%PUBLIC_URL%/favicon-32x32.png">
