--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <link rel="stylesheet" href="./Bootstrap5.css">
   <script src="https://kit.fontawesome.com/9b271ff51f.js" crossorigin="anonymous"></script>
-  <title>CHAIN CHAT</title>
+  <title>CHAT CHAIN</title>
 </head>
 
 <body>
